--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: Glass;
-  src: url("/public/fonts/Glass_TTY_VT220.ttf");
+  src: url('/public/fonts/Glass_TTY_VT220.ttf');
 }
 
 @import 'tailwindcss';
 
 @theme {
-  --font-glass: Glass, "sans-serif";
+  --font-glass: Glass, 'sans-serif';
 }
