--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,25 @@
 
 @theme {
   --font-glass: Glass, 'sans-serif';
+  --animate-flicker: flicker 0.15s infinite;
+  --animate-scan: scan 0.2s linear infinite;
+
+  @keyframes scan {
+    0% {
+      background-position: 0 0;
+    }
+    100% {
+      background-position: 0 10px;
+    }
+  }
+
+  @keyframes flicker {
+    0%,
+    100% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0.85;
+    }
+  }
 }
